Bug 1935759 - Work around Intel driver bug when binding clip mask. r=tnikkel a=RyanVM

The Windows Intel D3D driver does not seem to be recognizing that the clip mask
texture's data has changed unless the texture binding is re-latched. This causes
clipping to seemingly use an old version of the clip mask's contents.

To work around this bug, the clip mask is instead built on texture unit 0, and
then only bound on texture unit 1 after it is modified, so that the binding is
only re-latched on texture unit 1 after modification.

Differential Revision: https://phabricator.services.mozilla.com/D232184